# alice

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  alice.opam  alice.opam.template  alice_tests.opam  default.nix  dune-project  dune-workspace  flake.nix  release.nix  shell.nix
.github/workflows/: release.yml  test.yml
alice/: README.md
alice/src/: alice.ml  build.ml  clean.ml  common.ml  common.mli  dot.ml  dune  internal.ml  internal.mli  new.ml  remote_tarballs.ml  remote_tarballs.mli  run.ml  target.ml  target.mli  tools.ml  up.ml
boot/: aarch64-linux-gnu.sh  aarch64-linux-musl-static.sh  aarch64-macos.sh  macos-aarch64.sh  x86_64-linux-gnu.sh  x86_64-linux-musl-static.sh  x86_64-macos.sh  x86_64-windows.sh
build-scripts/: README.md
build-scripts/compiler/: README.md
build-scripts/tools/: README.md
build_plan/src/: alice_build_plan.ml  build_graph.ml  build_graph.mli  build_plan.ml  build_plan.mli  build_rule.ml  dune  origin.ml  (+1 more)
compiler/: README.md
dag/: README.md
demo/: README.md
dependencies/: README.md
dune.lock/: climate.0.5.0.pkg  climate.0.6.0.pkg  climate.0.8.0.pkg  climate.0.8.2.pkg  climate.0.8.3.pkg  climate.0.8.5.pkg  climate.0.8.6.pkg  climate.0.9.0.pkg  climate.dev.pkg  conf-mingw-w64-gcc-i686.1.pkg  dyn.3.20.1.pkg  eio_linux.1.3.pkg  eio_main.1.3.pkg  eio_posix.1.3.pkg  eio_windows.1.3.pkg  flexdll.0.44.pkg  fmt.0.11.0.pkg  hmap.0.8.1.pkg  iomux.0.4.pkg  kdl.0.2.0.pkg  lock.dune  menhir.20250903.pkg  menhirLib.20250903.pkg  mtime.2.1.0.pkg  ocaml-compiler.5.3.0.pkg  ocaml-env-mingw32.1.pkg  ocaml-system.5.3.1+relocatable.pkg  ocamlfind.1.9.8+alice.pkg  ocamlfind.1.9.8+dune.pkg  system-mingw.1.pkg  topkg.1.1.1.pkg  uring.2.7.0.pkg  xdg.3.20.1.pkg
engine/: README.md
env/: README.md
error/: README.md
graphviz/: README.md
hierarchy/: README.md
installation/: README.md
integration_tests/: multi-file.t  new.t  run-argv.t
io/: README.md
log/: README.md
manifest/: README.md
ocaml_compiler/: README.md
ocamldep/: README.md
package/: README.md
package_meta/: README.md
packaging/: replace-compiler-version-with-template-in-lockdir.patch
policy/: README.md
print/: README.md
project/: README.md
root/: README.md
scheduler/: README.md
scripts/: alice  build-alice-aarch64-linux-gnu.dockerfile  build-alice-aarch64-linux-musl-static.dockerfile  build-alice-linux-musl.dockerfile  build-alice-x86_64-linux-musl-static.dockerfile  generate_minified_bash_completion_script.sh
spice/: README.md
stdlib/: REAMDE.md
tool-build-scripts/: README.md
ui/: README.md
which/: README.md
(+342 files in other folders)
